# lumoAI

./: README.md  main.py  pyproject.toml
lumo/: db.sqlite3
lumo/accounts/: forms.py  urls.py  views.py
lumo/chats/: admin.py  forms.py  models.py  services.py  urls.py  views.py
lumo/chats/migrations/: 0001_initial.py  0002_message_isprompt.py  0003_message_hasmermaid_message_mermaid.py
lumo/lumo/: settings.py  urls.py  views.py
lumo/templates/: base.html  index.html
lumo/templates/chats/: chat.html  new_chat.html
lumo/templates/registration/: login.html  register.html
lumo/theme/static_src/src/: styles.css
lumo/theme/templates/: base.html
