[project]
name = "lumo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.5",
    "django-tailwind[reload]>=4.2.0",
    "google-generativeai>=0.8.5",
    "openai>=1.101.0",
    "puter>=0.0.13",
    "python-dotenv>=1.1.1",
]
